gl33-master/src/test/deca/context/invalid/other/while_fausse_string.deca
// Invalid test
// Boucle while fausse

{
    String s;
    
    while(s){
        println("non");
    }
}
